--- a/index.html
+++ b/index.html
@@ -12,10 +12,8 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Reem+Kufi|Roboto:300" rel="stylesheet">
 	<link href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" rel="stylesheet">
-	<link rel="stylesheet" href="css/reset.css">
-	<link rel="stylesheet" href="css/styles.css">
-	<link rel="stylesheet" href="css/themes/yellow-black.css">
-    <link rel="stylesheet" href="/style.css">
+	
+    	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<main class="main">
