--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<main class="main">
-        <nav class="header">
+	<div class="main">
+        <div class="header">
             <span class="header--item">Home</span>
             <span class="header--item">My work</span>
             <span class="header--item">About</span>
             <span class="header--item">Contact</span>
-        </nav>
+        </div>
 		<div class="intro">Hello, I'm Dinesh!</div>
 		<div class="tagline">Full Stack Dev | Open-Source Enthusiast | Blogger | Ninja</div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
@@ -34,6 +34,6 @@
 			<a class="icons-social--item" target="_blank" href="https://medium.com/@flexdinesh"><i class="fab fa-medium"></i></a>
 			<a class="icons-social--item" target="_blank" href="https://www.linkedin.com/in/dineshpandiyan"><i class="fab fa-linkedin"></i></a>
     </div>
-	</main>
+	</div>
 </body>
 </html>
