--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link rel="icon" href="favicon.ico" type="image/png" />
 
 	<link href="https://fonts.googleapis.com/css?family=Reem+Kufi|Roboto:300" rel="stylesheet">
-	<link href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" rel="stylesheet">
+<!-- 	<link href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" rel="stylesheet"> -->
 	
     	<link rel="stylesheet" href="style.css">
 </head>
