--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
 <!-- 	<link href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" rel="stylesheet"> -->
 	
     	<link rel="stylesheet" href="style.css">
+
+	<style>
+		.dummy-class {
+			background: red;
+			width: 100px;
+			height: 100px;
+		}
+	</style>
 </head>
 <body>
 	<div class="main">
